// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlayerAvatar /> doesnt show fascist avatar, owner icon, waited for icon, dead classname for minimum data 1`] = `
<div
  className="avatarWrapper mockClassName"
>
  <img
    alt="Player liberal avatar"
    className="portrait"
    src="test-file-stub"
  />
</div>
`;

exports[`<PlayerAvatar /> returns null if liberalAvatarPicture doesnt exist 1`] = `null`;

exports[`<PlayerAvatar /> shows liberal avatar, fascist avatar, owner icon, waited for icon, dead classname for full data 1`] = `
<div
  className="avatarWrapper mockClassName dead"
>
  <i
    className="fa fa-bolt ownerIcon"
  />
  <i
    className="fa fa-clock-o selectingWaitIcon"
  />
  <img
    alt="Player facist avatar"
    className="portrait facistPortrait"
    src="test-file-stub"
  />
  <img
    alt="Player liberal avatar"
    className="portrait"
    src="test-file-stub"
  />
</div>
`;
